test/files/neg/typemacros-regular-types-contextbounds.scala
trait Test {
  type Foo[T: List] <: Int
}